--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -18,7 +18,7 @@
     <script>
       var A = new Point('A').at([-5, -5])
       var B = new Point('B').at([5, 8])
-      var a = new Segment('a').joining(A,B).rotateAt(A,30)
+      var a = new Segment('a').joining(A,B)
 /*      
       var l = new Line('l').through(A).atAngle(30)
       var l2 = new Ray().orthogonalTo(l).through(B).turn(180)
