--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -15,20 +15,20 @@
   </head>
   <body>
     <script>
-      var A = new Point('A').at([0, 0]).labelPosition([-1,-1])
-      var B = new Point('B').at([5, 0])
-//      var s = new Ray().joining(A,B)
-      var C = new Point('C').azimuth(A,91
-				     ,B,40)
-/*      var t = triangle(A,B,C)
+      var A = new Point('A').at([-6, -2]).option('labelPosition',[-1,-1])
+      var B = new Point('B').at([6, 2])
+      var l = new Line(l).joining(A,B)
+      var C = new Point('C').azimuth(A,30,B,40)
+      var Cp= new Point().copy(C).reflectAt(l)
+     /*
+      var t = triangle(A,B,C)
       var h = t.height(1).dashed()
       var D = h.end.label('D')
       var t1 = new Triangle().copy(t).reflectAt(line(B,C))
       var t2 = triangle(A,D,C).reflectAt(line(A,C))
       var t3 = triangle(A,D,B).reflectAt(line(A,B))
-      var ra = t.angle(1)
-*/      
-      new Chart('fig1').put([A,B,C])
+*/
+      new Chart('fig1').put([l,A,B,C,Cp])
 
       
     </script>
