--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -9,33 +9,18 @@
     <script src='../lib/matrix.js'></script>
     <script src='../lib/graphics.js'></script>
     <script src='../lib/geometry.js'></script>
-    <link rel="stylesheet" href="../css/geometry.css">
+    <link rel="stylesheet" href="../css/dark.css">
     <style>
     </style>
   </head>
   <body>
     <script>
 
-      var A = new Point('A').at([-6, -2]).option('labelPosition',[-1,-1])
-      var B = new Point('B').at([6, 2])
-      var a = new Ray('a').joining(A,B)
-      var C = new Point('C').azimuth(A,30,B,40)
-      var Cp= new Point().copy(C).reflectAt(a)
-      var b = new Segment('b').through(Cp).heightTo(a)
-      var M = new Point('M').intersection(a,b)
-      var an = angle(C,A,B)
-      var r = new Ray().through(A).bisectrisse(an)
-     /*
-      var t = triangle(A,B,C)
-      var h = t.height(1).dashed()
-      var D = h.end.label('D')
-      var t1 = new Triangle().copy(t).reflectAt(line(B,C))
-      var t2 = triangle(A,D,C).reflectAt(line(A,C))
-      var t3 = triangle(A,D,B).reflectAt(line(A,B))
-      */
-      new Chart('fig1').put([a,b,an,r,A,B,C,M])
+      var C1 = new Circle(3).at(point([5,2]))
+      var C2 = new Circle(5).at(point([2,2]))
+      pts = new Group(C1.intersectionC(C2))
+      new Chart('fig1').put(C1,C2,pts)
       
     </script>
   </body>
 </html>	
-
