--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -9,7 +9,7 @@
     <script src='../lib/matrix.js'></script>
     <script src='../lib/graphics.js'></script>
     <script src='../lib/geometry.js'></script>
-    <script src='../lib/geomtests.js'></script>
+ <!--   <script src='../lib/geomtests.js'></script> -->
     <link rel="stylesheet" href="../css/dark.css">
     <style>
     </style>
