illustrations for lecture 2 and testing

--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -9,21 +9,26 @@
     <script src='../lib/matrix.js'></script>
     <script src='../lib/graphics.js'></script>
     <script src='../lib/geometry.js'></script>
- <!--   <script src='../lib/geomtests.js'></script> -->
-    <link rel="stylesheet" href="../css/dark.css">
+    <script src='../lib/geomtests.js'></script>
     <style>
+      body {
+	  background:#333;
+      }
+      svg {
+	  border: 1px dotted gray;
+      }
     </style>
   </head>
   <body>
     <script>
       var ch = new Chart('fig1')
-      var c = new Circle(6)
+      var c = new Circle(10)
       var A = new Point('A').on(c,pi/3)
       var r = new Ray()
       var l = new Segment().through(A).tangentTo(c).extendToLine(r)
-      var C = new Point('C').at(l.end.pt)
-      var an = new Angle('value').within(origin, C, A)
-      var B = new Point('B').azimuth(A, 60, C, 45)
+      var C = new Point('C').at(l.end.xy)
+      var an = new Angle('value').within(origin, C, A).option('labelRadius',5)
+      var B = new Point('B').azimuth(A, 60, C, 60)
       ch.put(c, l, r, A, an, origin, C, B)
       
     </script>
