--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -31,6 +31,9 @@
       var an = new Angle('value').within(origin, C, A).option('labelRadius',5)
       var B = new Point('B').azimuth(A, 60, C, 60)
       ch.put(c, l, r, A, an, origin, C, B)
+
+      var aa = new Segment().through(point([5,0])).tangentTo(cir1,1)
+      ch.put(cir1, aa)
       
     </script>
   </body>
