--- a/module1/lecture5/figures.html
+++ b/module1/lecture5/figures.html
@@ -45,7 +45,48 @@
       var ar1 = seg(p11,p21).arrow('true').dashed().color('wheat')
       ch12.put(g, ar1, ar2, p11, p12, p21, p22, origin.option('labelOffset',[1,-1]))
 
+      ////////////////////////////////////////////////////////////	
+      // fig13
+      var ch13 = new Chart('fig13')
+      var an1 = new Angle(30).label(' ')
+      ch13.put(an1.startRay, an1.endRay, an1,origin).adjustSize()
 
+      ////////////////////////////////////////////////////////////	
+      // fig14
+      var ch14 = new Chart('fig14')
+      var tr = triangle(an1.startRay.eqn(25), origin, an1.endRay.eqn(29))
+      ch14.put(tr.points(false).fill("skyblue").opacity(0.4), an1,origin).adjustSize()
+
+      ////////////////////////////////////////////////////////////	
+      // fig16
+      var ch16 = new Chart('fig16')
+      var A = new Point('A').at([0,0])
+      var B = new Point('B').at([20,0])
+      var C = new Point('C').at([13,0])
+      var s1 = new Segment().joining(A,B)
+      var r0 = new Ray('A')
+      var r1 = new Ray('C').atAngle(50)
+      var r2 = new Ray('B').atAngle(80)
+      var an1 = new Angle('a').between(r0, r1)
+      var an2 = new Angle('b').between(r1, r2)
+      ch16.put(new Group([s1,A,B,C]).shift([0,-7])
+	       , new Group([r0,r1,r2,an1, an2, origin])).adjustSize()
+      
+      ////////////////////////////////////////////////////////////	
+      // fig17
+      var ch17 = new Chart('fig17');
+      var A = new Point('A').at([0,0]);
+      var B = new Point('B').at([20,0]);
+      var s1 = new Segment().joining(A,B);
+      var C = s1.middle.label('C');
+      var r0 = new Ray('A');
+      var r1 = new Ray('C').atAngle(40)
+      var r2 = new Ray('B').atAngle(80)
+      var an1 = new Angle('a').between(r0, r1)
+      var an2 = new Angle('a').between(r1, r2)
+      ch17.put(new Group([s1,A,B,C]).shift([0,-7])
+	       , new Group([r0,r1,r2,an1, an2, origin])).adjustSize()
+      
 
     </script>
   </body>
