squares and borders

--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -33,7 +33,7 @@
       ch.put(c, l, r, A, an, origin, C, B)
 
       var aa = new Segment().through(point([5,0])).tangentTo(cir1,1)
-      ch.put(cir1, aa)
+      ch.put(cir1, aa, tri1)
       
     </script>
   </body>
