--- a/module1/lecture5/figures.html
+++ b/module1/lecture5/figures.html
@@ -122,43 +122,51 @@
 		   , new Group([r0,r1,r2,an1, an2, origin])).adjustSize()
       }
 
+      ////////////////////////////////////////////////////////////	
+      // fig20
       {
 	  const trig = ([a,b]) => point([(2*sqrt(3)*b+sqrt(3)*a)/3, a].scale(1/10))
+		.option('pointSize',4)
 	  let gen = (a,b) => new Group([
 	      trig([a,b]),trig([b,a]),
 	      trig([a,180-a-b]),trig([180-a-b,a]),
 	      trig([b,180-a-b]),trig([180-a-b,b])
 	  ])
-
-	  gen = (a,b) => trig([a,b,180-a-b].sorted().take(2))
+	  //gen = (a,b) => trig([a,b,180-a-b].sorted().take(2))
 
 	  let s = 18*2/sqrt(3)
-	  let ch = new Chart('fig')
+	  var ch = new Chart('fig')
 	  let t = new Triangle().on(new Segment().extendToLength(s))
 	  let eq = new Group([t.median(1), t.median(2), t.median(3)])
 	  var rect = new Triangle(trig([90,0]),trig([90,90]),trig([0,90]))
+	      .points(false).color('#1e90ff')
 	  var ostr = rect.fill('#1e90ff').opacity(0.5).points(false).noline()
 	  var tup = new Triangle(trig([90,0]),origin,trig([0,90]))
 	      .fill('green').opacity(0.25).points(false).noline();
-	  let tp = gen(50,10)
-	  let os = gen(50,50)
+	  let sample = trig([100,50]);
+	  let sampleOrth = new Segment().through(sample).dashed().color('black')
+	  samples = new Group([ sampleOrth.heightTo(t.side(1)).label('100')
+				.labelPosition(0.4)
+				, sampleOrth.heightTo(t.side(2)).label('30')
+				, sampleOrth.heightTo(t.side(3)).label('50')
+				, sample ])
+	  scale = new Scale(3, x => x*180).on(t.side(1)).setOrientation(-1)
 	  let g = new Group([ ostr, tup, rect
 			      , tup.superpose(origin, trig([90, 0]))
 			      , tup.superpose(origin, trig([0, 90]))
-			      , t.dashed().points(false), eq
+			      , eq
+			      , scale
 			      , trig([60, 60])
+			      , samples
 			      , new Text("равнобедренные").on(t.median(1), 1/7)
 			      , new Text("прямоугольные").on(ostr.side(3).flip(), 1/4)
-			      , new Text("пространство углов треугольников")
-			      .on(t.side(1), 1/6)
-			      .option('labelOffset',[0,-2])])
-	  let legend = row([ostr.on(seg(point([0,-2]),point([2,-2]))),
-			    new Text("остроугольные").at(point([2,-3])),
-			    tup.on(seg(point([13,-3.7]),point([15,-3.7]))),
-			    new Text("тупоугольные").at(point([15,-3]))]).below(g)
-	      .superpose(trig([60,60]), origin)
-	      .scale(35/18)
-	  ch.put(g).adjustSize()
+			    ])
+	      .superpose(trig([60, 60]), origin).scale(35/18)
+	  var title = new Text("пространство углов треугольников")
+	  let legend = column([row([trig([60, 60]), new Text("равносторонний")],0,2),
+			       row([ostr.scale(1/4), new Text("остроугольные")]),
+			       row([tup.scale(1/4), new Text("тупоугольные")])],1,2)
+	  ch.put(g.boxAlign([1,1],legend,[1,1])).adjustSize()
 	  
       }   
 
