--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -35,11 +35,15 @@
       var sc2 = new Scale(5).on(l).unit(10)
       var sc3= new Scale(5).on(r).range([0,5])
 
-      var p = new RegularPolygon(50,6).scale(1,1.9)
+      var p = new RegularPolygon(50,4).scale(1,1.9)
 	  .rotate(30).translate([-11,-11]).points(false)
       var scp = new Scale(10).circular().on(p).tickLength(-0.75)
+
+      var p2 = parametricCurve(t => [t, sin(2*t-t*t/10)],range(0,15,0.1))
+	  .scaleAt(origin,3).rotate(10).translate([-11,11]).points(false)
+
       g = new Group([c, l, l2, r, A, an, origin, C, B, sc1, sc2, sc3
-		     ,p, scp])
+		     ,p, scp, p2])
 
       
       ch.put(g)
