intersections feel better

--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -35,18 +35,18 @@
       var sc2 = new Scale(5).on(l).unit(10)
       var sc3= new Scale(5).on(r).range([0,5])
 
-      var p = new RegularPolygon(50,4).scale(1,1.9)
+      var p = new RegularPolygon(100,4).scale(1,1.9)
 	  .rotate(30).translate([-11,-11]).points(false)
-      var scp = new Scale(10).circular().on(p).tickLength(-0.75)
 
-      var p2 = new Polygon().parametricCurve(t => [t, sin(2*t-t*t/10)],range(0,15,0.1))
+      var pl = new Group(p.sides.map(s => new Segment().midPerpendicular(s).extend(-1,15)
+				     .clipBy(p).thin(0.25).color('wheat')))
+      var p2 = new Polygon().parametricCurve(t => [t, sin(2*t-t*t/10)],range(0,7,0.1))
 	  .scaleAt(origin,3).rotate(10).translate([-11,11]).points(false)
 
       g = new Group([c, l, l2, r, A, an, origin, C, B, sc1, sc2, sc3
-		     ,p, scp, p2])
-
-      
+		     , p2, pl, p])
       ch.put(g)
-    </script>
+
+g    </script>
   </body>
 </html>	
