--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -41,12 +41,15 @@
       var pl = new Group(p.sides.map(s => new Segment().midPerpendicular(s).extend(-1,15)
 				     .clipBy(p).thin(0.25).color('wheat')))
       var p2 = new Polygon().parametricCurve(t => [t, sin(2*t-t*t/10)],range(0,7,0.1))
-	  .scaleAt(origin,3).rotate(10).translate([-11,11]).points(false)
+	  .scaleAt(origin,3).rotate(10).translate([0,11]).points(false)
 
+      var m = Group.column(range(3,6).map(n => Group.row(range(3,6).map(m => new RegularPolygon(n+m-3)), 1, 0.5)), 1, 0.5)
+	  .translate([-15,15])
+      
       g = new Group([c, l, l2, r, A, an, origin, C, B, sc1, sc2, sc3
-		     , p2, pl, p])
+		     , p2, pl, p, m])
       ch.put(g)
 
-g    </script>
+    </script>
   </body>
 </html>	
