--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -46,8 +46,9 @@
       var m = Group.column(range(3,6).map(n => Group.row(range(3,6).map(m => new RegularPolygon(n+m-3)), 1, 0.5)), 1, 0.5)
 	  .translate([-15,15])
       
-      g = new Group([c, l, l2, r, A, an, origin, C, B, sc1, sc2, sc3
-		     , p2, pl, p, m])
+      g = new Group([c, l, l2, r, A, an, origin, C, B,
+		     sc1, sc2, sc3,
+		     p2, pl, p, m])
       ch.put(g)
 
     </script>
