documenting and testing

--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -28,7 +28,7 @@
       var r = new Ray()
       var l2 = new Segment().at(point([15,0])).tangentTo(c,1)
       var l = new Segment().at(A).tangentTo(c).extendToLine(r)
-      var C = l.end.copy()
+/*      var C = l.end.copy()
       var an = new Angle('value').within(A,C,origin).option('labelRadius',5)
       var B = new Point('B').azimuth(A, 60, C, 60)
       var sc1 = new Scale(7).circular().on(c.flip().rotate(90))
@@ -56,7 +56,7 @@
 		     , sc1, sc2, sc3, p2, p, m
 		    ])
       ch.put(g)
-
+*/
       
     </script>
   </body>
