--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -6,10 +6,11 @@
     <script src='../lib/analysis.js'></script>
     <script src='../lib/functions.js'></script>
     <script src='../lib/tools.js'></script>
+    <script src='../lib/testing.js'></script> 
     <script src='../lib/matrix.js'></script>
     <script src='../lib/graphics.js'></script>
     <script src='../lib/geometry.js'></script>
-    <script src='../lib/geomtests.js'></script> 
+<!--    <script src='../lib/geomtests.js'></script>  -->
     <style>
       body {
 	  background:#333;
