json-based test declaration enters

--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -56,9 +56,9 @@
       g = new Group([c, l, l2, r, A, an, origin, C, B
 		     , sc1, sc2, sc3, p2, p, m
 		    ])
-      ch.put(g)
+//      ch.put(g)
 
-//      ch.put(Ox,Oy, new Circle(5).at([-7,-7]))
+      ch.put(Ox,Oy)
 //      ch.put(failedParams["testing tests"][0])
       
     </script>
