--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -10,7 +10,6 @@
     <script src='../lib/matrix.js'></script>
     <script src='../lib/graphics.js'></script>
     <script src='../lib/geometry.js'></script>
-    <script src='../lib/geomtests.js'></script>
     <style>
       body {
 	  background:#333;
@@ -56,10 +55,8 @@
       g = new Group([c, l, l2, r, A, an, origin, C, B
 		     , sc1, sc2, sc3, p2, p, m
 		    ])
-//      ch.put(g)
+      ch.put(g)
 
-      ch.put(Ox,Oy)
-//      ch.put(failedParams["testing tests"][0])
       
     </script>
   </body>
