--- a/html/testing.html
+++ b/html/testing.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <pre id="logger"></pre>
-    <script src='../lib/geomtests.js'></script>
+    <script src='../lib/test.js'></script>
     <script>
       var ch = new Chart('fig1')
     </script>
