--- a/html/testing.html
+++ b/html/testing.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset='UTF-8'/>
+    <script src='../lib/prelude_ls.js'></script>
     <script src='../lib/d3.js'></script>
     <script src='../lib/analysis.js'></script>
     <script src='../lib/functions.js'></script>
