added experimental libs writtes in ls

--- a/html/testing.html
+++ b/html/testing.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <pre id="logger"></pre>
-    <script src='../lib/test.js'></script>
+    <script src='../lib/ls/test.js'></script>
     <script>
       var ch = new Chart('fig1')
     </script>
