experiments go on

--- a/html/testing.html
+++ b/html/testing.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <meta charset='UTF-8'/>
-    <script src='../lib/prelude_ls.js'></script>
     <script src='../lib/d3.js'></script>
     <script src='../lib/analysis.js'></script>
     <script src='../lib/functions.js'></script>
@@ -11,6 +10,8 @@
     <script src='../lib/matrix.js'></script>
     <script src='../lib/graphics.js'></script>
     <script src='../lib/geometry.js'></script>
+    <script src='../lib/ls/prelude.js'></script>
+    <script src='../lib/ls/test.js'></script>
     <style>
       body {
 	  background:#333;
@@ -21,8 +22,6 @@
     </style>
   </head>
   <body>
-    <pre id="logger"></pre>
-    <script src='../lib/ls/test.js'></script>
     <script>
       var ch = new Chart('fig1')
     </script>
