--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -26,10 +26,9 @@
       var c = new Circle(7)
       var A = new Point('A').on(c,1/6)
       var r = new Ray()
-      var l2 = new Segment().at(point([15,0])).tangentTo(c,1)
-      var l = new Segment().at(A).tangentTo(c).extendTo(r)
+      var l = new Segment().at(A).tangentTo(c,-1).extendTo(r)
       var C = l.end.copy()
-      var an = new Angle('value').within(A,C,origin).option('labelRadius',5)
+      var an = new Angle('value').within(origin,C,A).adjacent().option('labelRadius',5)
       var B = new Point('B').azimuth(A, 60, C, 60)
       var sc1 = new Scale(7).circular().on(c.flip().rotate(90))
       var sc2 = new Scale(5).on(l).unit(10)
@@ -52,8 +51,8 @@
 		  m => new Polygon().regular(n+m-3)), 1, 0.5)), 1, 0.5)
 	  .translate([-15,15])
       
-      g = new Group([c, l, l2, r, A, an, origin, C, B
-		     , sc1, sc2, sc3, p2, p, m
+      g = new Group([c, l, r, A, an, origin, C, B
+		     , sc1, sc3, p2, p, m
 		    ])
       ch.put(g)
 
