--- a/html/lstesting.html
+++ b/html/lstesting.html
@@ -5,6 +5,7 @@
     <script src='../lib/ls/prelude.js'></script>
     <script src='../lib/ls/monoid.js'></script>
     <script src='../lib/ls/tools.js'></script>
+    <script src='../lib/ls/sequence.js'></script>
     <script src='../lib/ls/testing.js'></script>
     <style>
     </style>
