--- a/html/lstesting.html
+++ b/html/lstesting.html
@@ -7,12 +7,13 @@
     <script src='../lib/ls/tools.js'></script>
     <script src='../lib/ls/sequence.js'></script>
     <script src='../lib/ls/testing.js'></script>
+<!--    <script src='../lib/ls/test.js'></script>-->
     <style>
     </style>
   </head>
   <body>
     <script>
-      
+      tst = {name: 'a', suite: [{name: 'b'}, {name: 'c', suite: [{d:8},{u:9}]}]}
     </script>
   </body>
 </html>	
