--- a/html/lstesting.html
+++ b/html/lstesting.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset='UTF-8'/>
     <script src='../lib/ls/prelude.js'></script>
+    <script src='../lib/d3.js'></script>
+    <script src='../lib/matrix.js'></script>
     <script src='../lib/ls/monoid.js'></script>
+    <script src='../lib/ls/oldtools.js'></script>
     <script src='../lib/ls/tools.js'></script>
     <script src='../lib/ls/sequence.js'></script>
     <script src='../lib/ls/testing.js'></script>
-<!--    <script src='../lib/ls/test.js'></script>-->
+    <script src='../lib/ls/graphics.js'></script>
+    <script src='../lib/ls/geometry.js'></script>
+    <script src='../lib/ls/test.js'></script>
     <style>
     </style>
   </head>
